# open-rag-stack

./: .env-template  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
api/: Dockerfile
api/app/: app.py  pyproject.toml
api/app/src/: rag.py  utils.py
bento-embedding-service/: Dockerfile  service.py
bento-model-service/: Dockerfile  service.py
grafana/dashboards/: rag-dashboard.json
mlflow-server/: Dockerfile  pyproject.toml
prometheus/: prometheus.yml
rag-orchestrator/: .env-template
rag-orchestrator/app/: app.py  pyproject.toml
rag-orchestrator/app/src/: config.py  lakefs_store.py  mongo_logger.py  rag.py  schema.py  utils.py
streamlit-app/: app.py
